tests/fixtures/invalid/str_pow_bytes.py
# Cannot power Str and Bytes
x: str = "hello" ** b"hello"
